Item, Block, TileEntities Registrate setup

--- a/src/main/resources/assets/excelsior/lang/en_us.json
+++ b/src/main/resources/assets/excelsior/lang/en_us.json
@@ -5,6 +5,7 @@
   "item.excelsior.raw_chrome": "Raw Chrome",
   "item.excelsior.crushed_chrome_ore": "Crushed Chrome",
 
+  "item.excelsior.chrome_ingot": "Chrome Ingot",
   "item.excelsior.stainless_steel_ingot": "Stainless Steel Ingot",
 
   "item.excelsior.raw_uranium": "Raw Uranium",
