Castor Plant Implementation

--- a/src/main/resources/assets/excelsior/lang/en_us.json
+++ b/src/main/resources/assets/excelsior/lang/en_us.json
@@ -23,6 +23,8 @@
   "item.excelsior.yellow_cake": "Yellow Cake",
 
   "item.excelsior.debug_ingot": "DEBUG INGOT",
+  "item.excelsior.castor_seeds": "Castor Seeds",
+  "item.excelsior.castor_plant": "Castor Plant",
 
   "block.excelsior.centrifuge": "Mechanical Centrifuge",
 
