--- a/src/main/resources/assets/excelsior/lang/en_us.json
+++ b/src/main/resources/assets/excelsior/lang/en_us.json
@@ -3,6 +3,7 @@
 
   "block.excelsior.chrome_ore": "Chrome Ore",
   "item.excelsior.raw_chrome": "Raw Chrome",
+  "block.excelsior.raw_chrome_block": "Raw Chrome Block",
   "item.excelsior.crushed_chrome_ore": "Crushed Chrome",
 
   "item.excelsior.chrome_ingot": "Chrome Ingot",
@@ -13,6 +14,7 @@
   "item.excelsior.depleted_uranium": "Depleted Uranium",
   "item.excelsior.low_enriched_uranium": "Low Enriched Uranium",
   "item.excelsior.high_enriched_uranium": "Highly Enriched Uranium",
+  "item.excelsior.yellow_cake": "Yellow Cake",
 
   "item.excelsior.fish_powder": "Fish Paste",
   "item.excelsior.fish_dough": "Fish Dough",
@@ -20,9 +22,8 @@
   "item.excelsior.fish_cake": "Fish Cake",
   "item.excelsior.fish_cake_soup": "Fish Cake Soup",
 
-  "item.excelsior.yellow_cake": "Yellow Cake",
-
   "item.excelsior.debug_ingot": "DEBUG INGOT",
+
   "item.excelsior.castor_seeds": "Castor Seeds",
   "item.excelsior.castor_plant": "Castor Plant",
 
